# BookDiff

./: BuildAndRun.py  CMakeLists.txt  OrderBook.cpp  OrderBook.h  README.txt  main.cpp
Data/: diffUpdate.json  snapshot.json
Include/: benchmark_component.h  heap_memory_track_component.h  unit_test.h
PricePointBook/: OrderBook.cpp  OrderBook.h  PriceBook.cpp  PriceBook.h
